@@ -4,6 +4,7 @@
    * A themeing specification for shell themes has been developed and agreed upon
      by a number of theme authors. If installing a theme matching this specification
      show the appropriate name
+   * Support installation and management of Shell extensions
 
 3.0.3
    * Autostart nautilus at login if it is configured to show
